gke-objects/keycloak/keycloak-gateway.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "keycloak.sieczak.cloud"
      tls:
        mode: SIMPLE
        credentialName: keycloak-sieczak-cloud-tls
