gke-objects/keycloak/keycloak-virtual-service.yml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak-vs
  namespace: keycloak
spec:
  hosts:
    - "keycloak.sieczak.cloud"
  gateways:
    - keycloak-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: keycloak-headless.keycloak.svc.cluster.local
            port:
              number: 8080
